# quechoisir-comparator-scrapers

./: .actrc  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: cd.yml  ci.yml
airflow_dags/: .gitignore  README.md  pyproject.toml
airflow_dags/dags/: internet_box_plans_etl_dag.env.example  internet_box_plans_etl_dag.py  mobile_phone_plans_etl_dag.env.example  mobile_phone_plans_etl_dag.py
internet_box_plans/: .bumpversion.toml  .env.example  Dockerfile-alpine  Dockerfile-bookworm  README.md  pyproject.toml
internet_box_plans/etl/: __init__.py  __main__.py  __version__.py  logging_setup.py
internet_box_plans/etl/data/: raw_data_loading.py  transformed_data_loading.py  utils.py
internet_box_plans/etl/extract/: __init__.py  downloading.py  selenium_setup.py
internet_box_plans/etl/load/: data_model.py  loading_to_bigquery.py
internet_box_plans/etl/transform/: data_model.py  internet_box_plans_transformation.py
mobile_phone_plans/: .bumpversion.toml  .env.example  Dockerfile  Dockerfile-alpine  Dockerfile-bookworm  README.md  pyproject.toml
mobile_phone_plans/config/: extract_action_sequence.yml
mobile_phone_plans/dags/: mobile_phone_plans_etl_dag.env  mobile_phone_plans_etl_dag.py
mobile_phone_plans/etl/: __init__.py  __main__.py  __version__.py  logging_setup.py
mobile_phone_plans/etl/data/: raw_data_loading.py  utils.py
mobile_phone_plans/etl/extract/: downloading.py  selenium_setup.py
mobile_phone_plans/etl/load/: data_model.py  loading_to_bigquery.py
mobile_phone_plans/etl/transform/: daily_plans_transformation.py  data_model.py
scripts/: README.md  airflow_stanalone.sh  airflow_standalone.sh  install_chrome_webdriver.sh  run_dag.sh  run_etl_dag.sh  start_airflow.sh  start_script.sh  startup_script.sh  vm_start_script.sh
